--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -123,7 +123,7 @@
         android:layout_marginRight="10dp"
         android:background="@color/white">
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/list_pulsa"
+            android:id="@+id/pulsaRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="15dp"
